More detailed errormessage for invalid version number.